fixed some errors and changed values to body request
