# api/swagger.yaml
@@ -93,9 +93,16 @@ paths:
       - "Smartlocker"
       description: "Requests an order and gets a orderID back if successed. Only for Client"
       operationId: "setOrder"
+      consumes:
+        - application/json
       parameters:
-      - $ref: "#/parameters/combo_id"
-      - $ref: "#/parameters/pickup_time"
+        - in: "body"
+          name: "set_order"
+          description: "set order object"
+          required: true
+          schema:
+            $ref: "#/definitions/Set_Order"
+
       responses:
         200:
           description: "OK"
@@ -179,11 +186,15 @@ paths:
         - "Smartlocker"
         description: "Sets the Status of a Combo. For Clerk."
         operationId: "updateCombo"
+        consumes:
+        - application/json
         parameters:
-        - $ref: "#/parameters/combo_id"
-        - $ref: "#/parameters/combo_name"
-        - $ref: "#/parameters/combo_price"
-        - $ref: "#/parameters/combo_available"
+          - in: "body"
+            name: "combo"
+            description: "combo object"
+            required: true
+            schema:
+              $ref: "#/definitions/Combo"
         responses:
           200:
             description: "OK"
@@ -201,11 +212,16 @@ paths:
         tags:
         - "Smartlocker"
         description: "Sets an order to served. For Clerk"
-        operationId: "updatedOrder"
+        operationId: "updateOrder"
+        consumes:
+        - application/json
         parameters:
-        - $ref: "#/parameters/combo_id"
-        - $ref: "#/parameters/pickup_time"
-        - $ref: "#/parameters/locker_nr"
+          - in: "body"
+            name: "close_order"
+            description: "close order object"
+            required: true
+            schema:
+              $ref: "#/definitions/Close_Order"
         responses:
           200:
             description: "OK"
@@ -241,6 +257,31 @@ paths:
 ################################################################################
 
 definitions:
+  Set_Order:
+    type: "object"
+    properties:
+      combo_id:
+        type: "integer"
+        format: "int32"
+        example: 3
+      pickup_time:
+        type: "string"
+        example: "10:30"
+
+  Close_Order:
+    type: "object"
+    properties:
+      combo_id:
+        type: "integer"
+        format: "int32"
+        example: 3
+      pickup_time:
+        type: "string"
+        example: "10:30"
+      locker_nr:
+        type: "integer"
+        format: "int32"
+        example: 1002
 
   Locker:
     type: "object"
@@ -346,19 +387,19 @@ definitions:
   Combo:
     type: "object"
     properties:
-      id:
+      combo_id:
         type: "integer"
         format: "int32"
         example: 3
-      name:
+      combo_name:
         type: "string"
         example: "combo 1"
-      price:
+      combo_price:
         type: "number"
         format: "float"
       combo_available:
-        type: "boolean"
-        example: "true = 1, false = 0"
+        type: "integer"
+        format: "int32"
 
   TimeSchedule:
     type: "object"
@@ -388,37 +429,6 @@ definitions:
 
 parameters:
 
-  combo_available:
-    name: "combo_available"
-    in: "query"
-    description: "Combo Status: is available?"
-    required: true
-    type: "integer"
-    format: "int32"
-
-  combo_id:
-    name: "combo_id"
-    in: "query"
-    description: "The combo identifier number"
-    required: true
-    type: "integer"
-    format: "int32"
-
-  combo_name:
-    name: "combo_name"
-    in: "query"
-    description: "The combo name"
-    required: true
-    type: "string"
-
-  combo_price:
-    name: "combo_price"
-    in: "query"
-    description: "The combo price"
-    required: true
-    type: "number"
-    format: "float"
-
   comboID:
     name: "comboID"
     in: "path"
@@ -426,28 +436,6 @@ parameters:
     required: true
     type: "integer"
     format: "int32"
-
-  locker_nr:
-    name: "locker_nr"
-    in: "query"
-    description: "The locker identifier number"
-    required: true
-    type: "integer"
-    format: "int32"
-
-  pickup_time:
-    name: "pickup_time"
-    in: "query"
-    description: "The time from schedule"
-    required: true
-    type: "string"
-
-  order_id:
-    name: "order_id"
-    in: "query"
-    description: "The order identifier string"
-    required: true
-    type: "string"
 
   orderID:
     name: "orderID"
